fix comment overflown text

--- a/src/frontend/components/CardComment/card-comment.scss
+++ b/src/frontend/components/CardComment/card-comment.scss
@@ -19,7 +19,7 @@
     margin-top: 10px;
     border-radius: 3px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   .attachment {
